# PenPal

./: README.md
penpals/: README.md  pyproject.toml
penpals/knowledge/: user_preference.txt
penpals/src/penpals/: crew.py  main.py
penpals/src/penpals/config/: agents.yaml  tasks.yaml
